--- a/package.json
+++ b/package.json
@@ -62,9 +62,17 @@
     "webpack-dev-server": "^1.13.1"
   },
   "dependencies": {
+    "alt": "^0.18.5",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.0.0",
+    "css-loader": "^0.23.1",
+    "immutable": "^3.8.1",
+    "node-sass": "^3.8.0",
     "normalize.css": "^4.0.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-bootstrap": "^0.30.2",
+    "react-dom": "^15.3.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1"
   }
 }
