--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap-sass": "^3.3.7",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
     "copyfiles": "^1.0.0",
@@ -36,6 +37,7 @@
     "eslint": "^3.0.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^6.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
     "grunt": "^1.0.1",
@@ -50,29 +52,31 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
+    "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
-    "style-loader": "^0.13.0",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
     "url-loader": "^0.5.6",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.13.1"
   },
   "dependencies": {
     "alt": "^0.18.5",
-    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.0.0",
     "css-loader": "^0.23.1",
     "immutable": "^3.8.1",
-    "node-sass": "^3.8.0",
     "normalize.css": "^4.0.0",
     "react": "^15.3.0",
     "react-bootstrap": "^0.30.2",
-    "react-dom": "^15.3.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1"
+    "react-dom": "^15.3.0"
   }
 }
